--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
-Your Bookmarks:
-<%= @bookmarks %>
+<ul>
+  <% @bookmarks.each do |bookmark| %>
+    <li>
+      <a href="<%= bookmark.url %>">
+        <%= bookmark.title %>
+      </a>
+    </li>
+  <% end %>
+</ul>
