Refactor code for delete bookmark and unit test it
Update view, controller, model and unit test

--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,5 +1,5 @@
 <form action="/bookmarks" method="post">
-  <input type="text" name="url" />
-  <input type="text" name="title" placeholder="Title" />
+  <input type="text" name="url" placeholder="Enter url" />
+  <input type="text" name="title" placeholder="Enter title" />
   <input type="submit" value="Submit" />
 </form>
