--- a/views/bookmarks/update.erb
+++ b/views/bookmarks/update.erb
@@ -1,5 +1,6 @@
-<form action="/bookmarks/<%= @id %>/update" method="post">
+<form action="/bookmarks/<%= @bookmark.id %>/update" method="post">
   <input type="hidden" name="_method" value="PATCH" />
-  <input type="text" name="title" placeholder="Enter title" />
-  <input type="submit" value="Submit" />
+  <input type="text" name="url"  value="<%= @bookmark.url %>" />
+  <input type="text" name="title" value="<%= @bookmark.title %>" />
+  <input type="submit" value="Update" />
 </form>
